--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "postcss.config.mjs"  ],
+, "postcss.config.mjs", "src/app/onboarding"  ],
   "exclude": ["node_modules"]
 }
